--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue-router": "^4.0.13"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^2.2.4",
         "autoprefixer": "^10.4.4",
         "postcss": "^8.4.12",
